--- a/package.json
+++ b/package.json
@@ -7,7 +7,11 @@
     "dev": "npm run docker:up && next dev",
     "lint:check": "prettier --check .",
     "lint:fix": "prettier --write .",
-    "test:watch": "jest --watchAll",
+    "test": "jest --runInBand",
+    "test:watch": "jest --watchAll --runInBand",
+    "test:docker:up": "docker compose -f infra/compose.test.yaml up -d",
+    "test:docker:stop": "docker compose -f infra/compose.test.yaml stop",
+    "test:docker:down": "docker compose -f infra/compose.test.yaml down",
     "docker:up": "docker compose -f infra/compose.yaml up -d",
     "docker:stop": "docker compose -f infra/compose.yaml stop",
     "docker:down": "docker compose -f infra/compose.yaml down",
@@ -19,6 +23,7 @@
   "license": "MIT",
   "dependencies": {
     "dotenv": "^16.4.4",
+    "dotenv-expand": "^11.0.6",
     "next": "^13.1.6",
     "node-pg-migrate": "^6.2.2",
     "pg": "^8.11.3",
