--- a/package.json
+++ b/package.json
@@ -4,17 +4,19 @@
   "description": "Clone tabnews, desenvolvido durante o curso.dev do Filipe Deschamps",
   "main": "index.js",
   "scripts": {
-    "dev": "npm run docker:up && npm run wait-for-postgres && npm run migration:up && next dev",
+    "dev": "npm run dev:setup && next dev",
+    "dev:setup": "npm run dev:docker:up && cross-env NODE_ENV=development npm run wait-for-postgres && npm run migration:up",
     "lint:check": "prettier --check .",
     "lint:fix": "prettier --write .",
-    "test": "jest --runInBand",
+    "test": "npm run test:setup && cross-env NODE_ENV=test concurrently -n next,jest --hide next -k -s command-jest \"next dev\" \"jest --runInBand --verbose\"",
+    "test:setup": "npm run test:docker:up && cross-env NODE_ENV=test npm run wait-for-postgres",
     "test:watch": "jest --watchAll --runInBand",
     "test:docker:up": "docker compose -f infra/compose.test.yaml up -d",
     "test:docker:stop": "docker compose -f infra/compose.test.yaml stop",
     "test:docker:down": "docker compose -f infra/compose.test.yaml down",
-    "docker:up": "docker compose -f infra/compose.yaml up -d",
-    "docker:stop": "docker compose -f infra/compose.yaml stop",
-    "docker:down": "docker compose -f infra/compose.yaml down",
+    "dev:docker:up": "docker compose -f infra/compose.yaml up -d",
+    "dev:docker:stop": "docker compose -f infra/compose.yaml stop",
+    "dev:docker:down": "docker compose -f infra/compose.yaml down",
     "migration:create": "node-pg-migrate -m infra/migrations create",
     "migration:up": "node-pg-migrate -m infra/migrations --envPath .env.development up",
     "wait-for-postgres": "node infra/scripts/wait-for-postgres.js"
@@ -22,6 +24,7 @@
   "author": "Daniela Caus",
   "license": "MIT",
   "dependencies": {
+    "async-retry": "^1.3.3",
     "dotenv": "^16.4.4",
     "dotenv-expand": "^11.0.6",
     "next": "^13.1.6",
@@ -31,6 +34,8 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "concurrently": "^8.2.2",
+    "cross-env": "^10.0.0",
     "jest": "^29.6.2",
     "prettier": "^3.4.2"
   }
