deixa execução dos testes mais rápido

--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
     "dev:setup": "npm run dev:docker:up && cross-env NODE_ENV=development npm run wait-for-postgres && npm run migration:up",
     "lint:check": "prettier --check .",
     "lint:fix": "prettier --write .",
-    "test": "npm run test:setup && cross-env NODE_ENV=test concurrently -n next,jest --hide next -k -s command-jest \"next dev\" \"jest --runInBand --verbose\"",
-    "test:setup": "npm run test:docker:up && cross-env NODE_ENV=test npm run wait-for-postgres",
+    "test": "npm run test:docker:up && cross-env NODE_ENV=test concurrently -n next,jest --hide next -k -s command-jest \"next dev\" \"jest --runInBand --verbose\" && npm run test:docker:down",
     "test:watch": "jest --watchAll --runInBand",
     "test:docker:up": "docker compose -f infra/compose.test.yaml up -d",
     "test:docker:stop": "docker compose -f infra/compose.test.yaml stop",
