--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "dev:setup": "npm run dev:docker:up && cross-env NODE_ENV=development npm run wait-for-postgres && npm run migration:up",
     "lint:prettier:check": "prettier --check .",
     "lint:prettier:fix": "prettier --write .",
+    "lint:eslint:check": "next lint --dir .",
     "test": "npm run test:docker:up && cross-env NODE_ENV=test concurrently -n next,jest --hide next -k -s command-jest \"next dev\" \"jest --runInBand --verbose\" && npm run test:docker:down",
     "test:watch": "jest --watchAll --runInBand",
     "test:docker:up": "docker compose -f infra/compose.test.yaml up -d",
@@ -35,6 +36,10 @@
   "devDependencies": {
     "concurrently": "^8.2.2",
     "cross-env": "^10.0.0",
+    "eslint": "^8.57.0",
+    "eslint-config-next": "^14.2.4",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-jest": "^28.6.0",
     "jest": "^29.6.2",
     "prettier": "^3.4.2"
   }
